# dsors

./: .env_example  Cargo.toml  LICENSE  README.md
src/: main.rs
src/core/: initializer.rs  mod.rs  websocket.rs
src/core/commands/: cold_start.rs  hello.rs  identify.rs  mod.rs  opcode.rs
src/core/events/: event.rs  event_factory.rs  heartbeat.rs  hello.rs  mod.rs
src/core/events/dispatch/: dispatch_handler.rs  mod.rs  on_ready.rs
src/core/events/handlers/: dispatch_handler.rs  hello.rs  mod.rs
src/error/: dsors_error.rs  mod.rs
src/http/: gateway.rs  mod.rs  request.rs
src/json/: serialize.rs
src/ws/: heartbeat_response.rs  initializer.rs  mod.rs  websocket.rs
