[package]
name = "dsors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.114"
tungstenite = { version =  "0.21.0", features = ["native-tls"] }
url = "2.5.0"
serde = { version = "1.0.197", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["blocking"] }
log = "0.4.20"
