[package]
name = "dsors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.114"
serde_repr = "0.1"
tungstenite = { version =  "0.21.0", features = ["native-tls"] }
url = "2.5.0"
serde = { version = "1.0.197", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["blocking"] }
log = "0.4.20"
dotenv = "0.15.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["run-cargo-test", "run-cargo-clippy", "precommit-hook"]
